# hunt-screenshoter

./: .gitignore  LICENSE.txt  README.md  agreement.py  main.py  pyproject.toml
.github/workflows/: build.yml
core/: const.py
modules/: constants.py  event_handler.py  game_utils.py  logging_setup.py  main_loop.py  screenshot_utils.py
